--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 :root {
   --dust: #bcbcbc;
@@ -7,6 +8,13 @@
   --disco-ball: #d4d4d4;
   --beige: #f1edde;
   --lightCyan: #b7dbd7;
+  --indigo: #524962;
+  --dark-indigo: #2c1b2a;
+  --sienna: #bc7047;
+  --golden: #ebd44d;
+  --wheat: #cab8a1;
+  --rosy-brown: #c1b2b4;
+  --lemon-chiffon: #eeeae0;
 }
 
 * {
@@ -52,15 +60,11 @@ html {
   }
 }
 
-/* #root {
-  width: 95vw;
-  height: 95vh;
-} */
 
 body {
-  font-family: 'Outfit', sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   font-size: 1.8rem; /* 18px */
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.4;
   display: flex;
   justify-content: center;
