--- a/src/styles/Icon.css
+++ b/src/styles/Icon.css
@@ -2,21 +2,52 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     overflow: hidden;
     padding-top: 0.5rem;
-   
-    width: 10rem;
-    height: 7rem;
+    
+    
+    width: 12rem;
+    height: 10rem;
     position: absolute;
 }
 
 .icon-container h5 {
-    font-weight: 400;
-    font-size: 1.7rem;
+    font-weight: 500;
+    font-size: 1rem;
+    color: var(--rosy-brown);
 }
 
 .icon-container:active {
     background-color: rgba(56, 161, 144, 0.247);
     border: 1px solid rgba(0, 0, 0, 0.288);
 }
+
+.icon-container img {
+    width: 5rem;
+    height: 5rem;
+    margin-bottom: 0.5rem;
+    pointer-events: none;
+    user-select: none;
+}
+
+  
+  
+  /* 460px / 16px = 28.75em */
+  @media (max-width: 28.75em) {
+    .icon-container{
+        width: 20rem;
+        height: 15rem;
+    }
+    .icon-container img {
+        width: 8rem;
+        height: 8rem;
+    }
+
+    .icon-container h5 {
+        font-weight: 500;
+        font-size: 1.5rem;
+        color: var(--rosy-brown);
+    }
+
+  }
