add draggable area, ajust some css

--- a/src/styles/Desktop.css
+++ b/src/styles/Desktop.css
@@ -11,8 +11,13 @@
     overflow: hidden;
 }
 
-@media (max-width: 600px) {
-.desktop {
-    height: 94vh;    
+.draggable-area {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
+
+@media (max-width: 600px) {
+    
 }
