--- a/src/styles/NavButtons.css
+++ b/src/styles/NavButtons.css
@@ -1,17 +1,19 @@
 .nav-buttons {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--dark-indigo);
-    border-top: 2px solid black;
-    height: 5rem;
-    width: 100%;
-    z-index: 1000;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: var(--dark-indigo);
+	border-top: 2px solid black;
+	height: 5rem;
+	width: 100%;
+	z-index: 1000;
+	position: relative;
 }
 
-.home-btn, .back-btn {
-    width: 3rem;
-    height: 3rem;
-    filter: invert(100%);
-    cursor: pointer;
+.home-btn,
+.back-btn {
+	width: 3rem;
+	height: 3rem;
+	filter: invert(100%);
+	cursor: pointer;
 }
