--- a/src/components/Skills-components/Skills.css
+++ b/src/components/Skills-components/Skills.css
@@ -1,17 +1,63 @@
-.skills-section-header {
+.skills-content {
   display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  background-color: var(--lemon-chiffon);
-  width: 100%;
-  height: 10rem;
-  border-bottom: 3px solid var(--dark-indigo);
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-.skills-section-title {
-  max-width: 64rem;
-  /* margin: 0 auto 6rem auto; */
-  text-transform: uppercase;
-  font-size: 1.5rem
+.skills-content h5 {
+  margin: 3rem 0;
+}
+
+.front-end-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 3fr));
+  grid-gap: 1rem;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+
+  padding: 2rem 4rem;
+  justify-items: center;
+}
+
+.back-end-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.skill-icon {
+  width: 15rem;
+  height: 10rem;
+}
+
+.skill-icon img{
+  width: 6rem;
+  height: 6rem;
+}
+
+.skill-name {
+  font-size: 1.2rem;
+  font-weight: 100;
+}
+
+@media (max-width: 600px) {
+  /* .front-end-container{
+    grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+  } */
+
+  .skill-icon {
+      width: 20rem;
+      height: 15rem;
+  }
+  .skill-icon img {
+      width: 10rem;
+      height: 10rem;
+  }
+
+  .skill-icon h5 {
+      font-weight: 500;
+      font-size: 2rem;
+  }
+
 }
