--- a/src/styles/Window.css
+++ b/src/styles/Window.css
@@ -39,6 +39,8 @@
 .window-content {
     text-align: center;
     overflow: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .close-icon, .maximize-icon {
@@ -69,6 +71,23 @@
     background-color: #555;
   } */
 
+  .section-header {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    background-color: var(--lemon-chiffon);
+    width: 100%;
+    height: 10rem;
+    border-bottom: 3px solid var(--dark-indigo);
+  }
+
+  .section-title {
+    max-width: 64rem;
+    /* margin: 0 auto 6rem auto; */
+    text-transform: uppercase;
+    font-size: 1.5rem
+  }
  
 @media (max-width: 600px) {
 
